--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <td class="topoBox">Tempo</td>
               </tr>
               <tr align="center">
-                <iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?377;363;256;321" style="border:none; margin: 0; padding:0" height="155" width="285"></iframe>
+                <iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?365;361" style="border:none; margin: 0; padding:0" height="220" width="265"></iframe>
               </tr>
 			             
               <tr>
