--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<h1>Nilton Garcez</h1>
-		<iframe width="157" height="220" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?25" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
-		<iframe width="285" height="155" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?25" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
+		<iframe width="285" height="155" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?39;218;558;256;84" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
+		<iframe width="157" height="220" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?39;218;558;256;84" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
 	</body>
 </html>
