--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 		<h1>Nilton Garcez</h1>
 		<iframe width="285" height="155" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?39;218;558;256;84" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
 		<iframe width="157" height="220" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?39;218;558;256;84" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
+		
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?8" style="border:none; margin: 0; padding:0" frameborder="0" height="220" width="157"></iframe>
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?8" style="border:none; margin: 0; padding:0" frameborder="0" height="155" width="285"></iframe>
+		
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?218" style="border:none; margin: 0; padding:0" frameborder="0" height="220" width="157"></iframe>
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?218" style="border:none; margin: 0; padding:0" frameborder="0" height="155" width="285"></iframe>
 	</body>
 </html>
