--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <html>
+	<head>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>		
+	</head>
 	<body>
 		<h1>Nilton Garcez</h1>
-		<iframe width="285" height="155" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?39;218;558;256;84" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
-		<iframe width="157" height="220" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?39;218;558;256;84" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
-		
-		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?8" style="border:none; margin: 0; padding:0" frameborder="0" height="220" width="157"></iframe>
-		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?8" style="border:none; margin: 0; padding:0" frameborder="0" height="155" width="285"></iframe>
-		
-		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?218" style="border:none; margin: 0; padding:0" frameborder="0" height="220" width="157"></iframe>
-		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?218" style="border:none; margin: 0; padding:0" frameborder="0" height="155" width="285"></iframe>
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?88" style="border:none; margin: 0; padding:0" frameborder="0" height="155" width="285"></iframe>
+
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?8;94" style="border:none; margin: 0; padding:0" frameborder="0" height="155" width="285"></iframe>
+
+		<iframe width="285" height="155" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-horizontal.html?39;264;352" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
+
+
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?88;218" style="border:none; margin: 0; padding:0" frameborder="0" height="220" width="157"></iframe>
+
+		<iframe id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?88;218" style="border:none; margin: 0; padding:0" frameborder="0" height="220" width="157"></iframe>
+
+		<iframe width="157" height="220" id="visualize-widget" src="http://tempo.clic.com.br/widgets/widget-vertical.html?39;264;352" frameborder="0" style="margin: 0px; padding: 0px; border: currentColor; border-image: none;"></iframe>
 	</body>
 </html>
