--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <title>Clic - Octo Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scale=no">
-    <link rel="stylesheet" href="/static/vendor/normalize.css/normalize.css">
+    <link rel="stylesheet" href="http://rbsdev-octo.herokuapp.com/static/vendor/normalize.css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/static/build/css/octo.css">
+    <link rel="stylesheet" href="http://rbsdev-octo.herokuapp.com/static/build/css/octo.css">
 </head>
 <body data-ga-eventCategory="Cliques OCTO - Clic">
 
@@ -102,8 +102,8 @@
     <footer class="footer" id="footer">
         <octoweb.models.location.Location object at 0x7f3492218d68>
     </footer>
-    <script src="/static/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="/static/vendor/modernizr/modernizr.js"></script>
+    <script src="http://rbsdev-octo.herokuapp.com/static/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="http://rbsdev-octo.herokuapp.com/static/vendor/modernizr/modernizr.js"></script>
     <!-- Google Tag Manager -->
     <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MZ8ZZR"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -113,6 +113,6 @@
     '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MZ8ZZR');</script>
     <!-- End Google Tag Manager -->
-    <script src="/static/js/app.js"></script>
+    <script src="http://rbsdev-octo.herokuapp.com/static/js/app.js"></script>
 </body>
 </html>
