--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                         <span class="clictempo">Ver mais no clicTempo</span>
                     </div>
                     <div class="header__subheader__tempo">
-                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy">
+                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy" style="margin-top: 3px;">
                             <svg id="cloudy" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
 	<rect opacity="0" fill="#fff" width="256" height="256"/>
 	<g class="groupCloud">
-		<title>Nublado</title>
-		<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M211.5,206.9L211.5,206.9L54.5,207v0C24.3,206.4,0,181.5,0,151
-			c0-30.9,24.9-56,55.7-56c0.8,0,1.7,0,2.5,0.1c7.7-26.6,32-46,60.9-46c35,0,63.4,28.6,63.4,63.9c0,3-0.3,6-0.7,8.9
-			c7.7-5.6,17.1-8.9,27.4-8.9c25.8,0,46.7,21.1,46.7,47.1C256,185.2,236.3,205.8,211.5,206.9z"/>
-		<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M106.8,128.8c-1.7-24.4-27.6-43.5-45.6-41.9
-			C60,89.5,59,92.2,58.2,95C80,96,98.5,109.6,106.8,128.8z M214,200H82c0,0-17.2,0-21,0c-33,0-56.5-24-56.5-56.9
-			c0-8.3,1.8-16.2,4.9-23.3c-0.7,1-1.3,2.1-1.9,3.1c-0.1,0.2-0.2,0.4-0.3,0.5c-1.2,2.1-2.3,4.4-3.2,6.7c-0.1,0.2-0.2,0.5-0.3,0.7
+		<title>Neblina</title>
+		<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M211.5,165.1L211.5,165.1l-156.9,0.1v0
+			C24.3,164.6,0,139.7,0,109.2c0-30.9,24.9-56,55.7-56c0.8,0,1.7,0,2.5,0.1c7.7-26.6,32-46,60.9-46c35,0,63.4,28.6,63.4,63.9
+			c0,3-0.3,6-0.7,8.9c7.7-5.6,17.1-8.9,27.4-8.9c25.8,0,46.7,21.1,46.7,47.1C256,143.4,236.3,164,211.5,165.1z"/>
+		<path fill-rule="evenodd" clip-rule="evenodd" fill="#E6F4FD" d="M106.8,87C105,62.6,79.2,43.4,61.1,45.1
+			c-1.2,2.6-2.1,5.3-2.9,8.1C80,54.2,98.5,67.8,106.8,87z M214,158.2H82c0,0-17.2,0-21,0c-33,0-56.5-24-56.5-56.9
+			C4.5,93,6.2,85.1,9.4,78c-0.7,1-1.3,2.1-1.9,3.1c-0.1,0.2-0.2,0.4-0.3,0.5c-1.2,2.1-2.3,4.4-3.2,6.7c-0.1,0.2-0.2,0.5-0.3,0.7
 			c-0.4,1.2-0.9,2.3-1.2,3.5c0,0,0,0,0,0c-0.4,1.2-0.7,2.3-0.9,3.5c-0.1,0.3-0.1,0.6-0.2,0.8c-0.3,1.2-0.5,2.4-0.7,3.7
-			c0,0,0,0,0,0.1c-0.2,1.2-0.3,2.4-0.4,3.7c0,0.3-0.1,0.6-0.1,0.9C0.1,148.4,0,149.7,0,151c0,0.9,0,1.9,0.1,2.8
+			c0,0,0,0,0,0.1c-0.2,1.2-0.3,2.4-0.4,3.7c0,0.3-0.1,0.6-0.1,0.9c-0.1,1.3-0.1,2.5-0.1,3.8c0,0.9,0,1.9,0.1,2.8
 			c0,0.3,0,0.6,0.1,0.9c0,0.6,0.1,1.2,0.1,1.8c0,0.4,0.1,0.7,0.1,1.1c0.1,0.5,0.1,1.1,0.2,1.6c0.1,0.4,0.1,0.8,0.2,1.1
 			c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.3,1,0.4,1.4
 			c0.1,0.4,0.2,0.8,0.4,1.2c0.2,0.5,0.3,0.9,0.5,1.4c0.1,0.4,0.3,0.8,0.4,1.1c0.2,0.5,0.3,0.9,0.5,1.4c0.2,0.4,0.3,0.7,0.5,1.1
@@ -63,7 +63,7 @@
 			c0.5,0.2,1,0.5,1.5,0.7c0.3,0.1,0.6,0.3,0.9,0.4c0.5,0.2,1.1,0.4,1.6,0.7c0.3,0.1,0.6,0.2,0.9,0.3c0.5,0.2,1.1,0.4,1.7,0.6
 			c0.3,0.1,0.6,0.2,0.9,0.3c0.6,0.2,1.1,0.4,1.7,0.5c0.3,0.1,0.6,0.2,0.8,0.2c0.6,0.2,1.2,0.3,1.8,0.5c0.3,0.1,0.5,0.1,0.8,0.2
 			c0.6,0.1,1.3,0.3,1.9,0.4c0.3,0,0.5,0.1,0.8,0.1c0.7,0.1,1.3,0.2,2,0.3c0.2,0,0.5,0.1,0.7,0.1c0.7,0.1,1.4,0.1,2.2,0.2
-			c0.2,0,0.4,0,0.6,0.1c0.9,0.1,1.8,0.1,2.7,0.1v0h156.9v-0.1c12.8-0.6,24.3-6.4,32.4-15.4C235.2,197.1,225.1,200,214,200z"/>
+			c0.2,0,0.4,0,0.6,0.1c0.9,0.1,1.8,0.1,2.7,0.1v0h156.9v-0.1c12.8-0.6,24.3-6.4,32.4-15.4C235.2,155.2,225.1,158.2,214,158.2z"/>
 	</g>
 </svg>
                         </div>
