--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
                         <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy">
                             <svg id="fog" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
 	<rect opacity="0" fill="#fff" width="256" height="256"/>
+	<g class="groupFog">
+		<title>Neblina</title>
+		<g class="first">
+			<path opacity="0.6" fill-rule="evenodd" class="whiteBase"  clip-rule="evenodd" fill="#FFFFFF" d="M50.2,180.3h155.7c7.3,0,13.2,5.9,13.2,13.2
+				c0,7.3-5.9,13.2-13.2,13.2H50.2c-7.3,0-13.2-5.9-13.2-13.2C37,186.2,42.9,180.3,50.2,180.3z"/>
+			<path opacity="0.5" fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M48,201.2h159c5.4,0,10-3.2,12.1-7.9
+				c0,0.1,0,0.1,0,0.2c0,7.3-5.9,13.2-13.2,13.2H50.1c-6.6,0-12-4.8-13-11.1C39.5,198.9,43.5,201.2,48,201.2z"/>
+		</g>
+		<g class="second">
+			<path opacity="0.6" fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M72.1,221.8h111.7c7.3,0,13.1,5.9,13.1,13.1
+				c0,7.3-5.9,13.1-13.1,13.1H72.1c-7.3,0-13.1-5.9-13.1-13.1C59,227.7,64.9,221.8,72.1,221.8z"/>
+			<path opacity="0.5" fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M70,242.6h115c5.4,0,10-3.2,12-7.9
+				c0,0.1,0,0.1,0,0.2c0,7.3-5.9,13.1-13.1,13.1H72.2c-6.6,0-12-4.8-13-11.1C61.5,240.4,65.5,242.6,70,242.6z"/>
+		</g>
+	</g>
+
 	<g class="groupCloud">
 		<title>Neblina</title>
 		<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M211.5,165.1L211.5,165.1l-156.9,0.1v0
