--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span class="clictempo">Ver mais no clicTempo</span>
                     </div>
                     <div class="header__subheader__tempo">
-                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy">
+                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy style="margin-top: 3px;">
                             <svg id="fog" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
 							<rect opacity="0" fill="#fff" width="256" height="256"/>
 							<g class="groupFog">
