--- a/index.html
+++ b/index.html
@@ -38,50 +38,29 @@
                         <span class="clictempo">Ver mais no clicTempo</span>
                     </div>
                     <div class="header__subheader__tempo">
-                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy style="margin-top: 3px;">
-                            <svg id="fog" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
-							<rect opacity="0" fill="#fff" width="256" height="256"/>
-							<g class="groupFog">
-								<title>Neblina</title>
-								<g class="first">
-									<path opacity="0.6" fill-rule="evenodd" class="whiteBase"  clip-rule="evenodd" fill="#FFFFFF" d="M50.2,180.3h155.7c7.3,0,13.2,5.9,13.2,13.2
-										c0,7.3-5.9,13.2-13.2,13.2H50.2c-7.3,0-13.2-5.9-13.2-13.2C37,186.2,42.9,180.3,50.2,180.3z"/>
-									<path opacity="0.5" fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M48,201.2h159c5.4,0,10-3.2,12.1-7.9
-										c0,0.1,0,0.1,0,0.2c0,7.3-5.9,13.2-13.2,13.2H50.1c-6.6,0-12-4.8-13-11.1C39.5,198.9,43.5,201.2,48,201.2z"/>
-								</g>
-								<g class="second">
-									<path opacity="0.6" fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M72.1,221.8h111.7c7.3,0,13.1,5.9,13.1,13.1
-										c0,7.3-5.9,13.1-13.1,13.1H72.1c-7.3,0-13.1-5.9-13.1-13.1C59,227.7,64.9,221.8,72.1,221.8z"/>
-									<path opacity="0.5" fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M70,242.6h115c5.4,0,10-3.2,12-7.9
-										c0,0.1,0,0.1,0,0.2c0,7.3-5.9,13.1-13.1,13.1H72.2c-6.6,0-12-4.8-13-11.1C61.5,240.4,65.5,242.6,70,242.6z"/>
-								</g>
-							</g>
-
-							<g class="groupCloud">
-								<title>Neblina</title>
-								<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M211.5,165.1L211.5,165.1l-156.9,0.1v0
-									C24.3,164.6,0,139.7,0,109.2c0-30.9,24.9-56,55.7-56c0.8,0,1.7,0,2.5,0.1c7.7-26.6,32-46,60.9-46c35,0,63.4,28.6,63.4,63.9
-									c0,3-0.3,6-0.7,8.9c7.7-5.6,17.1-8.9,27.4-8.9c25.8,0,46.7,21.1,46.7,47.1C256,143.4,236.3,164,211.5,165.1z"/>
-								<path fill-rule="evenodd" clip-rule="evenodd" fill="#E6F4FD" d="M106.8,87C105,62.6,79.2,43.4,61.1,45.1
-									c-1.2,2.6-2.1,5.3-2.9,8.1C80,54.2,98.5,67.8,106.8,87z M214,158.2H82c0,0-17.2,0-21,0c-33,0-56.5-24-56.5-56.9
-									C4.5,93,6.2,85.1,9.4,78c-0.7,1-1.3,2.1-1.9,3.1c-0.1,0.2-0.2,0.4-0.3,0.5c-1.2,2.1-2.3,4.4-3.2,6.7c-0.1,0.2-0.2,0.5-0.3,0.7
-									c-0.4,1.2-0.9,2.3-1.2,3.5c0,0,0,0,0,0c-0.4,1.2-0.7,2.3-0.9,3.5c-0.1,0.3-0.1,0.6-0.2,0.8c-0.3,1.2-0.5,2.4-0.7,3.7
-									c0,0,0,0,0,0.1c-0.2,1.2-0.3,2.4-0.4,3.7c0,0.3-0.1,0.6-0.1,0.9c-0.1,1.3-0.1,2.5-0.1,3.8c0,0.9,0,1.9,0.1,2.8
-									c0,0.3,0,0.6,0.1,0.9c0,0.6,0.1,1.2,0.1,1.8c0,0.4,0.1,0.7,0.1,1.1c0.1,0.5,0.1,1.1,0.2,1.6c0.1,0.4,0.1,0.8,0.2,1.1
-									c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.3,1,0.4,1.4
-									c0.1,0.4,0.2,0.8,0.4,1.2c0.2,0.5,0.3,0.9,0.5,1.4c0.1,0.4,0.3,0.8,0.4,1.1c0.2,0.5,0.3,0.9,0.5,1.4c0.2,0.4,0.3,0.7,0.5,1.1
-									c0.2,0.4,0.4,0.9,0.6,1.3c0.2,0.4,0.3,0.7,0.5,1.1c0.2,0.4,0.4,0.9,0.6,1.3c0.2,0.4,0.4,0.7,0.6,1c0.2,0.4,0.5,0.8,0.7,1.3
-									c0.2,0.3,0.4,0.7,0.6,1c0.3,0.4,0.5,0.8,0.8,1.2c0.2,0.3,0.4,0.7,0.7,1c0.3,0.4,0.5,0.8,0.8,1.2c0.2,0.3,0.5,0.6,0.7,0.9
-									c0.3,0.4,0.6,0.8,0.9,1.2c0.2,0.3,0.5,0.6,0.7,0.9c0.3,0.4,0.6,0.8,1,1.1c0.2,0.3,0.5,0.6,0.8,0.8c0.3,0.4,0.7,0.7,1,1.1
-									c0.3,0.3,0.5,0.5,0.8,0.8c0.4,0.4,0.7,0.7,1.1,1c0.3,0.3,0.5,0.5,0.8,0.8c0.4,0.3,0.8,0.7,1.1,1c0.3,0.2,0.6,0.5,0.8,0.7
-									c0.4,0.3,0.8,0.6,1.2,1c0.3,0.2,0.6,0.4,0.9,0.7c0.4,0.3,0.8,0.6,1.3,0.9c0.3,0.2,0.6,0.4,0.9,0.6c0.4,0.3,0.9,0.6,1.3,0.9
-									c0.3,0.2,0.6,0.4,0.9,0.6c0.5,0.3,0.9,0.6,1.4,0.8c0.3,0.2,0.6,0.3,0.9,0.5c0.5,0.3,1,0.5,1.4,0.8c0.3,0.2,0.6,0.3,0.9,0.5
-									c0.5,0.2,1,0.5,1.5,0.7c0.3,0.1,0.6,0.3,0.9,0.4c0.5,0.2,1.1,0.4,1.6,0.7c0.3,0.1,0.6,0.2,0.9,0.3c0.5,0.2,1.1,0.4,1.7,0.6
-									c0.3,0.1,0.6,0.2,0.9,0.3c0.6,0.2,1.1,0.4,1.7,0.5c0.3,0.1,0.6,0.2,0.8,0.2c0.6,0.2,1.2,0.3,1.8,0.5c0.3,0.1,0.5,0.1,0.8,0.2
-									c0.6,0.1,1.3,0.3,1.9,0.4c0.3,0,0.5,0.1,0.8,0.1c0.7,0.1,1.3,0.2,2,0.3c0.2,0,0.5,0.1,0.7,0.1c0.7,0.1,1.4,0.1,2.2,0.2
-									c0.2,0,0.4,0,0.6,0.1c0.9,0.1,1.8,0.1,2.7,0.1v0h156.9v-0.1c12.8-0.6,24.3-6.4,32.4-15.4C235.2,155.2,225.1,158.2,214,158.2z"/>
-							</g>
-						</svg>
+                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy" style="margin-top: 3px;">
+                            <svg id="sun" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
+	<rect opacity="0" fill="#fff" width="256" height="256"/>
+	<g class="groupSun">
+		<title>C&eacute;u claro</title>
+		<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFE75A" d="M128,34.2c51.8,0,93.8,42,93.8,93.8s-42,93.8-93.8,93.8
+			s-93.8-42-93.8-93.8S76.2,34.2,128,34.2z"/>
+		<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFEB5" d="M253.5,125.8L252,125v0l-25.7-16.4l17.8-25.1l0,0l0.9-1.2
+			c1.7-2.3,0.8-4.6-2.1-5l-1.5-0.3l0,0l-30-5.3l6.6-29.6l0,0l0.3-1.4c0.6-2.8-1.1-4.5-3.8-3.8l-1.5,0.4l0,0l-29.4,6.6l-5-29l0,0
+			l-0.2-1.5c-0.5-2.8-2.7-3.7-5-2.1l-1.2,0.9l0,0l-24.9,17.6L131,4h0l-0.8-1.5c-1.5-2.4-3.9-2.3-5.4,0.1L123.9,4h0l-16.2,25.4
+			L83.4,12.1l0,0l-1.3-0.9c-2.3-1.7-4.6-0.7-5,2.1l-0.2,1.5l0,0l-5.3,29.9l-29.4-6.6l0,0l-1.5-0.4c-2.8-0.6-4.5,1.1-3.8,3.8l0.3,1.4
+			l0,0l6.5,28.9l-28.8,5l0,0L13.3,77c-2.8,0.5-3.7,2.7-2.1,5l0.9,1.2l0,0l17.9,25.2L4,125v0l-1.5,0.8c-2.4,1.5-2.3,3.9,0.1,5.4L4,132
+			v0l24.6,15.7l-17,24l-0.1,0l-0.9,1.3c-1.7,2.3-0.8,4.6,2.1,5l1.5,0.2l0,0l29.7,5.2L37.2,213l0,0l-0.4,1.5c-0.6,2.8,1.1,4.5,3.8,3.8
+			l1.4-0.3l0,0l29.2-6.5l5.2,30.1l0,0l0.2,1.5c0.5,2.8,2.7,3.7,5,2.1l1.3-0.9l0,0l24.8-17.5l16.1,25.3h0l0.8,1.5
+			c1.5,2.4,3.9,2.3,5.4-0.1l0.8-1.4h0l15.9-24.9l24.7,17.5l0,0l1.2,0.9c2.3,1.7,4.6,0.8,5-2.1l0.3-1.5l0,0l5.3-29.8l29.8,6.7l0,0
+			l1.4,0.3c2.8,0.6,4.5-1.1,3.8-3.8l-0.4-1.5l0,0l-6.6-29.6l30.3-5.2l0,0l1.5-0.2c2.8-0.5,3.7-2.7,2.1-5l-0.9-1.3l0,0L227.1,148
+			L252,132v0l1.4-0.8C255.8,129.7,255.9,127.3,253.5,125.8z M128,221.8c-51.8,0-93.8-42-93.8-93.8s42-93.8,93.8-93.8
+			s93.8,42,93.8,93.8S179.8,221.8,128,221.8z"/>
+	</g>
+	<path fill-rule="evenodd" clip-rule="evenodd" fill="#F0D04F" d="M209.9,175c-25.9,44.8-83.5,60-128.6,34.1
+		c-6.6-3.8-12.6-8.3-17.9-13.3c43.3,13.9,91.9-3.5,115.4-44.2c19.7-34,16.5-74.9-4.7-105.2c0.3,0.2,0.7,0.4,1.1,0.6
+		C220.3,72.9,235.8,130.2,209.9,175z"/>
+</svg>
                         </div>
                         <span class="header__tempo">
                             20º
