--- a/index.html
+++ b/index.html
@@ -39,79 +39,31 @@
                     </div>
                     <div class="header__subheader__tempo">
                         <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy" style="margin-top: 3px;">
-                            <svg id="day-rain" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
+                            <svg id="cloudy" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
 	<rect opacity="0" fill="#fff" width="256" height="256"/>
-	<g class="groupDrops amountLow">
-		<title>Sol com chuva</title>
-		<g class="groupDrop first">
-			<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M64,200.2c3.6,0,16,19.6,16,26.3c0,8.8-7.2,16-16,16
-				c-8.8,0-16-7.2-16-16C48,219.9,60.4,200.2,64,200.2z"/>
-			<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M64,237.3c7.3,0,13.6-4.7,16-11.2c0,0.1,0,0.2,0,0.4
-				c0,8.8-7.2,16-16,16c-8.8,0-16-7.2-16-16c0-0.1,0-0.2,0-0.4C50.4,232.7,56.7,237.3,64,237.3z"/>
-		</g>
-		<g class="groupDrop third">
-			<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M110.9,187.7c2.9,0,12.7,15.4,12.7,20.7
-				c0,6.9-5.7,12.6-12.7,12.6c-7,0-12.7-5.6-12.7-12.6C98.2,203.1,108,187.7,110.9,187.7z"/>
-			<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M110.9,217c5.8,0,10.8-3.7,12.7-8.8c0,0.1,0,0.2,0,0.3
-				c0,6.9-5.7,12.6-12.7,12.6c-7,0-12.7-5.6-12.7-12.6c0-0.1,0-0.2,0-0.3C100.1,213.4,105.1,217,110.9,217z"/>
-		</g>
-		<g class="groupDrop second">
-			<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M156.8,207.7c4.1,0,18.3,22.4,18.3,30
-				c0,10.1-8.2,18.3-18.3,18.3c-10.1,0-18.3-8.2-18.3-18.3C138.5,230.2,152.7,207.7,156.8,207.7z"/>
-			<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M156.8,250.1c8.4,0,15.6-5.3,18.3-12.8c0,0.1,0,0.3,0,0.4
-				c0,10.1-8.2,18.2-18.3,18.2c-10.1,0-18.3-8.2-18.3-18.2c0-0.1,0-0.3,0-0.4C141.3,244.8,148.4,250.1,156.8,250.1z"/>
-		</g>
-		<g class="groupDrop fourth">
-			<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M196.3,188.8c2.6,0,11.7,14,11.7,18.7c0,6.3-5.2,11.4-11.7,11.4
-				c-6.5,0-11.7-5.1-11.7-11.4C184.6,202.8,193.6,188.8,196.3,188.8z"/>
-			<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M196.3,215.2c5.4,0,10-3.3,11.7-8c0,0.1,0,0.2,0,0.3
-				c0,6.3-5.2,11.4-11.7,11.4c-6.5,0-11.7-5.1-11.7-11.4c0-0.1,0-0.2,0-0.3C186.3,211.9,190.9,215.2,196.3,215.2z"/>
-		</g>
-	</g>
-
-	<g class="groupSun">
-		<title>Sol com chuva</title>
-		<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFEB5" d="M255.1,65.5l-0.6,0.4l0,0l-12.6,8l8.6,12.3l0,0l0.5,0.6
-			c0.8,1.2,0.4,2.3-1,2.5l-0.7,0.1l0,0l-15.2,2.6l3.3,14.9l0,0l0.2,0.8c0.3,1.4-0.5,2.3-1.9,1.9l-0.7-0.2l0,0l-14.9-3.3l-2.6,14.9
-			l0,0l-0.1,0.8c-0.2,1.4-1.4,1.9-2.5,1l-0.6-0.4l0,0l-12.4-8.7l-8,12.6l0,0l-0.4,0.6c-0.8,1.2-2,1.2-2.7,0l-0.4-0.7h0l-8.1-12.8
-			l-12.4,8.7l0,0l-0.6,0.5c-1.2,0.8-2.3,0.4-2.5-1l-0.1-0.7l0,0l-2.6-15.1l-14.6,3.3l0,0l-0.7,0.2c-1.4,0.3-2.3-0.5-1.9-1.9
-			l0.2-0.8l0,0l3.3-14.8L135,89.1l0,0l-0.7-0.1c-1.4-0.2-1.9-1.4-1-2.5l0.5-0.6l0,0l8.5-12l-12.4-7.9l0,0l-0.6-0.4
-			c-1.2-0.8-1.2-2,0-2.7l0.7-0.4v0l13.1-8.3L134,41.5l0,0l-0.4-0.6c-0.8-1.2-0.4-2.3,1-2.5l0.8-0.1l0,0l14.5-2.5l-3.2-14.5l0,0
-			l-0.2-0.7c-0.3-1.4,0.5-2.3,1.9-1.9l0.8,0.2l0,0l14.7,3.3l2.6-15l0,0l0.1-0.7c0.2-1.4,1.4-1.9,2.5-1l0.6,0.5l0,0l12.2,8.6
-			L190,1.6h0l0.4-0.7c0.8-1.2,2-1.2,2.7,0l0.4,0.6l0,0l8.2,12.9l12.5-8.7l0,0l0.6-0.4c1.2-0.8,2.3-0.4,2.5,1l0.1,0.8l0,0l2.5,14.6
-			l14.7-3.3l0,0l0.8-0.2c1.4-0.3,2.3,0.5,1.9,1.9l-0.2,0.7l0,0l-3.3,14.8l15,2.6l0,0l0.8,0.1c1.4,0.2,1.9,1.4,1,2.5l-0.4,0.6l0,0
-			l-8.9,12.6l13,8.2v0l0.7,0.4C256.3,63.6,256.3,64.8,255.1,65.5z M232.8,56l-6.2-15.1l-11.1-11.1l-15.6-6.5h-15.6L169,29.5
-			l-11.2,11.2L151.4,56v16.1l6.1,14.8l11.8,11.8l14.3,6h16.7l14.7-6.1l11.7-11.7l6.1-14.5V56z"/>
-		<path fill-rule="evenodd" clip-rule="evenodd" fill="#FFE75A" d="M192.1,16.9c26,0,47,21,47,47s-21,47-47,47s-47-21-47-47
-			S166.1,16.9,192.1,16.9z"/>
-	</g>
-	<path fill-rule="evenodd" clip-rule="evenodd" fill="#F0D04F" d="M233.2,87.5c-12.9,22.4-41.7,30.1-64.2,17.1
-		c-3.3-1.9-6.3-4.2-8.9-6.7c21.6,7,45.9-1.7,57.6-22.1c9.8-17,8.2-37.5-2.4-52.7c0.2,0.1,0.4,0.2,0.5,0.3
-		C238.4,36.4,246.1,65.1,233.2,87.5z"/>
-
 	<g class="groupCloud">
-		<title>Sol com chuva</title>
-		<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M199.7,173.7L199.7,173.7l-148.2,0.1v0
-			C23,173.2,0,149.8,0,120.9C0,91.7,23.5,68,52.5,68c0.8,0,1.6,0,2.4,0.1c7.2-25.1,30.2-43.4,57.5-43.4c33.1,0,59.9,27,59.9,60.3
-			c0,2.9-0.2,5.7-0.6,8.4c7.3-5.3,16.2-8.4,25.8-8.4c24.4,0,44.1,19.9,44.1,44.4C241.7,153.2,223.1,172.6,199.7,173.7z"/>
-		<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M100.8,99.9c-1.6-23-26-41.1-43.1-39.5c-1.1,2.5-2,5-2.8,7.7
-			C75.5,69,93,81.9,100.8,99.9z M202,167.2H77.4c0,0-16.3,0-19.8,0c-31.1,0-53.4-22.7-53.4-53.7c0-7.8,1.7-15.3,4.7-22
-			c-0.6,1-1.2,1.9-1.8,3c-0.1,0.2-0.2,0.3-0.3,0.5c-1.1,2-2.1,4.1-3,6.3c-0.1,0.2-0.2,0.4-0.3,0.6c-0.4,1.1-0.8,2.2-1.2,3.3
-			c0,0,0,0,0,0c-0.3,1.1-0.6,2.2-0.9,3.3c-0.1,0.3-0.1,0.5-0.2,0.8c-0.3,1.1-0.5,2.3-0.7,3.5c0,0,0,0,0,0.1
-			c-0.2,1.1-0.3,2.3-0.4,3.5c0,0.3,0,0.6-0.1,0.9c-0.1,1.2-0.1,2.4-0.1,3.6c0,0.9,0,1.8,0.1,2.7c0,0.3,0,0.6,0.1,0.9
-			c0,0.6,0.1,1.2,0.1,1.7c0,0.3,0.1,0.7,0.1,1c0.1,0.5,0.1,1,0.2,1.6c0.1,0.4,0.1,0.7,0.2,1.1c0.1,0.5,0.2,1,0.3,1.5
-			c0.1,0.4,0.2,0.7,0.2,1.1c0.1,0.5,0.2,0.9,0.3,1.4c0.1,0.4,0.2,0.7,0.3,1.1c0.1,0.5,0.2,0.9,0.4,1.4c0.1,0.4,0.2,0.7,0.4,1.1
-			c0.1,0.4,0.3,0.9,0.4,1.3c0.1,0.4,0.3,0.7,0.4,1.1c0.2,0.4,0.3,0.9,0.5,1.3c0.1,0.4,0.3,0.7,0.5,1c0.2,0.4,0.4,0.8,0.6,1.2
-			c0.2,0.3,0.3,0.7,0.5,1c0.2,0.4,0.4,0.8,0.6,1.2c0.2,0.3,0.4,0.7,0.5,1c0.2,0.4,0.4,0.8,0.7,1.2c0.2,0.3,0.4,0.6,0.6,1
-			c0.2,0.4,0.5,0.8,0.7,1.2c0.2,0.3,0.4,0.6,0.6,0.9c0.3,0.4,0.5,0.8,0.8,1.1c0.2,0.3,0.4,0.6,0.7,0.9c0.3,0.4,0.6,0.7,0.8,1.1
-			c0.2,0.3,0.5,0.6,0.7,0.8c0.3,0.4,0.6,0.7,0.9,1.1c0.2,0.3,0.5,0.5,0.7,0.8c0.3,0.3,0.6,0.7,1,1c0.2,0.3,0.5,0.5,0.7,0.8
-			c0.3,0.3,0.7,0.7,1,1c0.3,0.2,0.5,0.5,0.8,0.7c0.4,0.3,0.7,0.6,1.1,1c0.3,0.2,0.5,0.4,0.8,0.7c0.4,0.3,0.7,0.6,1.1,0.9
-			c0.3,0.2,0.5,0.4,0.8,0.6c0.4,0.3,0.8,0.6,1.2,0.9c0.3,0.2,0.5,0.4,0.8,0.6c0.4,0.3,0.8,0.6,1.2,0.8c0.3,0.2,0.5,0.4,0.8,0.5
-			c0.4,0.3,0.9,0.5,1.3,0.8c0.3,0.2,0.6,0.3,0.8,0.5c0.5,0.2,0.9,0.5,1.4,0.7c0.3,0.1,0.6,0.3,0.8,0.4c0.5,0.2,0.9,0.5,1.4,0.7
-			c0.3,0.1,0.6,0.3,0.8,0.4c0.5,0.2,1,0.4,1.5,0.6c0.3,0.1,0.5,0.2,0.8,0.3c0.5,0.2,1,0.4,1.6,0.6c0.3,0.1,0.5,0.2,0.8,0.3
-			c0.5,0.2,1.1,0.3,1.6,0.5c0.3,0.1,0.5,0.2,0.8,0.2c0.6,0.2,1.1,0.3,1.7,0.4c0.3,0.1,0.5,0.1,0.8,0.2c0.6,0.1,1.2,0.2,1.8,0.4
-			c0.2,0,0.5,0.1,0.7,0.1c0.6,0.1,1.3,0.2,1.9,0.3c0.2,0,0.4,0.1,0.6,0.1c0.7,0.1,1.4,0.1,2,0.2c0.2,0,0.4,0,0.6,0
-			c0.9,0.1,1.7,0.1,2.6,0.1v0h148.2v-0.1c12.1-0.6,23-6.1,30.6-14.6C222,164.4,212.5,167.2,202,167.2z"/>
+		<title>Nublado</title>
+		<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M211.5,206.9L211.5,206.9L54.5,207v0C24.3,206.4,0,181.5,0,151
+			c0-30.9,24.9-56,55.7-56c0.8,0,1.7,0,2.5,0.1c7.7-26.6,32-46,60.9-46c35,0,63.4,28.6,63.4,63.9c0,3-0.3,6-0.7,8.9
+			c7.7-5.6,17.1-8.9,27.4-8.9c25.8,0,46.7,21.1,46.7,47.1C256,185.2,236.3,205.8,211.5,206.9z"/>
+		<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M106.8,128.8c-1.7-24.4-27.6-43.5-45.6-41.9
+			C60,89.5,59,92.2,58.2,95C80,96,98.5,109.6,106.8,128.8z M214,200H82c0,0-17.2,0-21,0c-33,0-56.5-24-56.5-56.9
+			c0-8.3,1.8-16.2,4.9-23.3c-0.7,1-1.3,2.1-1.9,3.1c-0.1,0.2-0.2,0.4-0.3,0.5c-1.2,2.1-2.3,4.4-3.2,6.7c-0.1,0.2-0.2,0.5-0.3,0.7
+			c-0.4,1.2-0.9,2.3-1.2,3.5c0,0,0,0,0,0c-0.4,1.2-0.7,2.3-0.9,3.5c-0.1,0.3-0.1,0.6-0.2,0.8c-0.3,1.2-0.5,2.4-0.7,3.7
+			c0,0,0,0,0,0.1c-0.2,1.2-0.3,2.4-0.4,3.7c0,0.3-0.1,0.6-0.1,0.9C0.1,148.4,0,149.7,0,151c0,0.9,0,1.9,0.1,2.8
+			c0,0.3,0,0.6,0.1,0.9c0,0.6,0.1,1.2,0.1,1.8c0,0.4,0.1,0.7,0.1,1.1c0.1,0.5,0.1,1.1,0.2,1.6c0.1,0.4,0.1,0.8,0.2,1.1
+			c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.3,1,0.4,1.4
+			c0.1,0.4,0.2,0.8,0.4,1.2c0.2,0.5,0.3,0.9,0.5,1.4c0.1,0.4,0.3,0.8,0.4,1.1c0.2,0.5,0.3,0.9,0.5,1.4c0.2,0.4,0.3,0.7,0.5,1.1
+			c0.2,0.4,0.4,0.9,0.6,1.3c0.2,0.4,0.3,0.7,0.5,1.1c0.2,0.4,0.4,0.9,0.6,1.3c0.2,0.4,0.4,0.7,0.6,1c0.2,0.4,0.5,0.8,0.7,1.3
+			c0.2,0.3,0.4,0.7,0.6,1c0.3,0.4,0.5,0.8,0.8,1.2c0.2,0.3,0.4,0.7,0.7,1c0.3,0.4,0.5,0.8,0.8,1.2c0.2,0.3,0.5,0.6,0.7,0.9
+			c0.3,0.4,0.6,0.8,0.9,1.2c0.2,0.3,0.5,0.6,0.7,0.9c0.3,0.4,0.6,0.8,1,1.1c0.2,0.3,0.5,0.6,0.8,0.8c0.3,0.4,0.7,0.7,1,1.1
+			c0.3,0.3,0.5,0.5,0.8,0.8c0.4,0.4,0.7,0.7,1.1,1c0.3,0.3,0.5,0.5,0.8,0.8c0.4,0.3,0.8,0.7,1.1,1c0.3,0.2,0.6,0.5,0.8,0.7
+			c0.4,0.3,0.8,0.6,1.2,1c0.3,0.2,0.6,0.4,0.9,0.7c0.4,0.3,0.8,0.6,1.3,0.9c0.3,0.2,0.6,0.4,0.9,0.6c0.4,0.3,0.9,0.6,1.3,0.9
+			c0.3,0.2,0.6,0.4,0.9,0.6c0.5,0.3,0.9,0.6,1.4,0.8c0.3,0.2,0.6,0.3,0.9,0.5c0.5,0.3,1,0.5,1.4,0.8c0.3,0.2,0.6,0.3,0.9,0.5
+			c0.5,0.2,1,0.5,1.5,0.7c0.3,0.1,0.6,0.3,0.9,0.4c0.5,0.2,1.1,0.4,1.6,0.7c0.3,0.1,0.6,0.2,0.9,0.3c0.5,0.2,1.1,0.4,1.7,0.6
+			c0.3,0.1,0.6,0.2,0.9,0.3c0.6,0.2,1.1,0.4,1.7,0.5c0.3,0.1,0.6,0.2,0.8,0.2c0.6,0.2,1.2,0.3,1.8,0.5c0.3,0.1,0.5,0.1,0.8,0.2
+			c0.6,0.1,1.3,0.3,1.9,0.4c0.3,0,0.5,0.1,0.8,0.1c0.7,0.1,1.3,0.2,2,0.3c0.2,0,0.5,0.1,0.7,0.1c0.7,0.1,1.4,0.1,2.2,0.2
+			c0.2,0,0.4,0,0.6,0.1c0.9,0.1,1.8,0.1,2.7,0.1v0h156.9v-0.1c12.8-0.6,24.3-6.4,32.4-15.4C235.2,197.1,225.1,200,214,200z"/>
 	</g>
 </svg>
                         </div>
