--- a/index.html
+++ b/index.html
@@ -1,118 +1,125 @@
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Clic - Octo Web</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scale=no">
-    <link rel="stylesheet" href="http://rbsdev-octo.herokuapp.com/static/vendor/normalize.css/normalize.css">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="http://rbsdev-octo.herokuapp.com/static/build/css/octo.css">
-</head>
-<body data-ga-eventCategory="Cliques OCTO - Clic">
-
-    <header class="header" id="header">
-
-        <div class="header__container">
-            <div class="header__logo">
-                <a href="/" class="trackable" data-ga-eventAction="Barra superior" data-ga-eventLabel="Clicou Logo">
-                    <h1>Clic</h1>
-                </a>
-            </div>
-            <a href="#" class="btn menu-btn header__menu trackable" data-ga-eventAction="Barra superior" data-ga-eventLabel="Abriu Menu">
-                <img src="/static/images/icon-octo-menu.png" alt="Menu" class="header__menu__image">
-            </a>
-            <a href="#" class="header__state" data-ga-eventAction="Barra Superior" data-ga-eventLabel="Trocou estado">
-                RS
-            </a>
-        </div>
-
-        <div class="header__subheader">
-            <div class="header__mask">&nbsp;</div>
-                <a href="http://tempo.clic.com.br/rs/sao-sepe" class="trackable header__subheader_container" data-ga-eventAction="Barra Superior" data-ga-eventLabel="Clicou tempo" target="_blank">
-                    <div class="header__subheader__cidade">
-                        <div>
-                            <span class="cidade">
-                                São Sepé, RS
-                            </span>
-                            <span class="icon-octo-geolocation">&nbsp;</span>
-                        </div>
-                        <span class="clictempo">Ver mais no clicTempo</span>
-                    </div>
-                    <div class="header__subheader__tempo">
-                        <div class="header__subheader__tempo__icon" id="header__subheader__tempo__icon_cloudy" style="margin-top: 3px;">
-                            <svg id="cloudy" x="0px" y="0px" viewBox="0 0 256 256" enable-background="new 0 0 256 256">
-	<rect opacity="0" fill="#fff" width="256" height="256"/>
-	<g class="groupCloud">
-		<title>Nublado</title>
-		<path fill-rule="evenodd" class="whiteBase" clip-rule="evenodd" fill="#FFFFFF" d="M211.5,206.9L211.5,206.9L54.5,207v0C24.3,206.4,0,181.5,0,151
-			c0-30.9,24.9-56,55.7-56c0.8,0,1.7,0,2.5,0.1c7.7-26.6,32-46,60.9-46c35,0,63.4,28.6,63.4,63.9c0,3-0.3,6-0.7,8.9
-			c7.7-5.6,17.1-8.9,27.4-8.9c25.8,0,46.7,21.1,46.7,47.1C256,185.2,236.3,205.8,211.5,206.9z"/>
-		<path fill-rule="evenodd" class="whiteShadow" clip-rule="evenodd" fill="#E6F4FD" d="M106.8,128.8c-1.7-24.4-27.6-43.5-45.6-41.9
-			C60,89.5,59,92.2,58.2,95C80,96,98.5,109.6,106.8,128.8z M214,200H82c0,0-17.2,0-21,0c-33,0-56.5-24-56.5-56.9
-			c0-8.3,1.8-16.2,4.9-23.3c-0.7,1-1.3,2.1-1.9,3.1c-0.1,0.2-0.2,0.4-0.3,0.5c-1.2,2.1-2.3,4.4-3.2,6.7c-0.1,0.2-0.2,0.5-0.3,0.7
-			c-0.4,1.2-0.9,2.3-1.2,3.5c0,0,0,0,0,0c-0.4,1.2-0.7,2.3-0.9,3.5c-0.1,0.3-0.1,0.6-0.2,0.8c-0.3,1.2-0.5,2.4-0.7,3.7
-			c0,0,0,0,0,0.1c-0.2,1.2-0.3,2.4-0.4,3.7c0,0.3-0.1,0.6-0.1,0.9C0.1,148.4,0,149.7,0,151c0,0.9,0,1.9,0.1,2.8
-			c0,0.3,0,0.6,0.1,0.9c0,0.6,0.1,1.2,0.1,1.8c0,0.4,0.1,0.7,0.1,1.1c0.1,0.5,0.1,1.1,0.2,1.6c0.1,0.4,0.1,0.8,0.2,1.1
-			c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.2,1,0.3,1.5c0.1,0.4,0.2,0.8,0.3,1.2c0.1,0.5,0.3,1,0.4,1.4
-			c0.1,0.4,0.2,0.8,0.4,1.2c0.2,0.5,0.3,0.9,0.5,1.4c0.1,0.4,0.3,0.8,0.4,1.1c0.2,0.5,0.3,0.9,0.5,1.4c0.2,0.4,0.3,0.7,0.5,1.1
-			c0.2,0.4,0.4,0.9,0.6,1.3c0.2,0.4,0.3,0.7,0.5,1.1c0.2,0.4,0.4,0.9,0.6,1.3c0.2,0.4,0.4,0.7,0.6,1c0.2,0.4,0.5,0.8,0.7,1.3
-			c0.2,0.3,0.4,0.7,0.6,1c0.3,0.4,0.5,0.8,0.8,1.2c0.2,0.3,0.4,0.7,0.7,1c0.3,0.4,0.5,0.8,0.8,1.2c0.2,0.3,0.5,0.6,0.7,0.9
-			c0.3,0.4,0.6,0.8,0.9,1.2c0.2,0.3,0.5,0.6,0.7,0.9c0.3,0.4,0.6,0.8,1,1.1c0.2,0.3,0.5,0.6,0.8,0.8c0.3,0.4,0.7,0.7,1,1.1
-			c0.3,0.3,0.5,0.5,0.8,0.8c0.4,0.4,0.7,0.7,1.1,1c0.3,0.3,0.5,0.5,0.8,0.8c0.4,0.3,0.8,0.7,1.1,1c0.3,0.2,0.6,0.5,0.8,0.7
-			c0.4,0.3,0.8,0.6,1.2,1c0.3,0.2,0.6,0.4,0.9,0.7c0.4,0.3,0.8,0.6,1.3,0.9c0.3,0.2,0.6,0.4,0.9,0.6c0.4,0.3,0.9,0.6,1.3,0.9
-			c0.3,0.2,0.6,0.4,0.9,0.6c0.5,0.3,0.9,0.6,1.4,0.8c0.3,0.2,0.6,0.3,0.9,0.5c0.5,0.3,1,0.5,1.4,0.8c0.3,0.2,0.6,0.3,0.9,0.5
-			c0.5,0.2,1,0.5,1.5,0.7c0.3,0.1,0.6,0.3,0.9,0.4c0.5,0.2,1.1,0.4,1.6,0.7c0.3,0.1,0.6,0.2,0.9,0.3c0.5,0.2,1.1,0.4,1.7,0.6
-			c0.3,0.1,0.6,0.2,0.9,0.3c0.6,0.2,1.1,0.4,1.7,0.5c0.3,0.1,0.6,0.2,0.8,0.2c0.6,0.2,1.2,0.3,1.8,0.5c0.3,0.1,0.5,0.1,0.8,0.2
-			c0.6,0.1,1.3,0.3,1.9,0.4c0.3,0,0.5,0.1,0.8,0.1c0.7,0.1,1.3,0.2,2,0.3c0.2,0,0.5,0.1,0.7,0.1c0.7,0.1,1.4,0.1,2.2,0.2
-			c0.2,0,0.4,0,0.6,0.1c0.9,0.1,1.8,0.1,2.7,0.1v0h156.9v-0.1c12.8-0.6,24.3-6.4,32.4-15.4C235.2,197.1,225.1,200,214,200z"/>
-	</g>
-</svg>
-                        </div>
-                        <span class="header__tempo">
-                            20º
-                        </span>
-                    </div>
-                </a>
-        </div>
-    </header>
-
-
-    <section class="main" id="main">
-        <div class="main__mask"></div>
-        <article class="main__highlight" style="background: url(http://www.rbsdirect.com.br/imagesrc/17275127.jpg?w=1024&h=768&a=b); background-position: center; background-size: cover; background-repeat: no-repeat;">
-                <span class="main__container">
-                    <a href="http://zh.clicrbs.com.br/rs/jogo-ao-vivo/gauchao/inter-e-aimore-11-03-2015-1930" class="">
-                        <h1>
-                            Gauchão
-                        </h1>
-                    </a>
-                    <a href="http://zh.clicrbs.com.br/rs/jogo-ao-vivo/gauchao/inter-e-aimore-11-03-2015-1930" class="">
-                        <p>
-                            Fim de jogo no Beira-Rio. Inter vence o Aimoré por 3x0
-                        </p>
-                    </a>
-                    <button class="btn btn-highlight">
-                        <span>
-                            Confira
-                        </span>
-                    </button>
-                </span>
-        </article>
-    </section>
-
-    <footer class="footer" id="footer">
-        <octoweb.models.location.Location object at 0x7f3492218d68>
-    </footer>
-    <script src="http://rbsdev-octo.herokuapp.com/static/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="http://rbsdev-octo.herokuapp.com/static/vendor/modernizr/modernizr.js"></script>
-    <!-- Google Tag Manager -->
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MZ8ZZR"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MZ8ZZR');</script>
-    <!-- End Google Tag Manager -->
-    <script src="http://rbsdev-octo.herokuapp.com/static/js/app.js"></script>
-</body>
-</html>
+{
+update: 1426525720,
+news: [
+{
+timestamp: 1427221800,
+img: {
+alt: "Ibra volta a pedir desculpas por chamar a França de "país de merda"",
+url: "http://www.clicrbs.com.br/rbs/image/17285059.jpg"
+},
+subtitle: "Atacante sueco destacou que não se referiu às pessoas e que palavras foram tiradas do contexto",
+type: "simple",
+tag: "Polêmica em Paris",
+title: "Ibra volta a pedir desculpas por chamar a França de "país de merda"",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/ibra-volta-a-pedir-desculpas-por-chamar-a-franca-de-pais-de-merda-4719580.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719580"
+},
+{
+timestamp: 1426525509,
+img: {
+alt: "Cantor Cauby Peixoto recupera-se em casa",
+url: "http://www.clicrbs.com.br/rbs/image/17285588.jpg"
+},
+subtitle: "Segundo a assessoria de imprensa do artista, ele está muito bem",
+type: "simple",
+tag: "Depois de um mês no hospital",
+title: "Cantor Cauby Peixoto recupera-se em casa",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/cantor-cauby-peixoto-recupera-se-em-casa-4719579.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719579"
+},
+{
+timestamp: 1426523969,
+tag: "Violência",
+subtitle: "Vítima teve orelha, rosto, ombro, braços e costas cortados por facão",
+type: "simple",
+title: "Jovem é torturado por gangue durante quatro horas em São Gabriel",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/jovem-e-torturado-por-gangue-durante-quatro-horas-em-sao-gabriel-4719558.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719558"
+},
+{
+timestamp: 1426525448,
+img: {
+alt: "Este país está mais forte que nunca",
+url: "http://www.clicrbs.com.br/rbs/image/17285561.jpg"
+},
+subtitle: "Presidente veio a público pela primeira vez depois de protestos contra o governo",
+type: "simple",
+tag: "Após manifestações",
+title: ""Este país está mais forte que nunca", diz Dilma em pronunciamento",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/este-pais-esta-mais-forte-que-nunca-diz-dilma-em-pronunciamento-4719577.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719577"
+},
+{
+timestamp: 1426524970,
+img: {
+alt: "Platini chama de "escravagismo" propriedade de jogadores por terceiros",
+url: "http://www.clicrbs.com.br/rbs/image/16830443.jpg"
+},
+subtitle: "Presidente da Uefa comanda cruzada contra empresários que detêm direitos econômicos de jogadores",
+type: "simple",
+tag: "Sem partilha de atletas",
+title: "Platini chama de "escravagismo" propriedade de jogadores por terceiros",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/platini-chama-de-escravagismo-propriedade-de-jogadores-por-terceiros-4719573.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719573"
+},
+{
+timestamp: 1426523962,
+tag: "Em crescimento",
+subtitle: "Crescimento foi maior que o mesmo mês de 2014",
+type: "simple",
+title: "PIB do Peru tem 66 meses consecutivos de expansão",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/pib-do-peru-tem-66-meses-consecutivos-de-expansao-4719559.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719559"
+}
+],
+highlights: [
+{
+timestamp: 1426524095,
+img: {
+alt: "Ex-atacante do Inter começa bem em novo clube na Polônia"",
+url: "http://www.clicrbs.com.br/rbs/image/17285535.jpg"
+},
+subtitle: "Artilheiro na base colorada, Rafael Porcellis fez dois gols em dois jogos",
+type: "simple",
+tag: "Prata da Dupla",
+title: "Ex-atacante do Inter começa bem em novo clube na Polônia",
+link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/ex-atacante-do-inter-comeca-bem-em-novo-clube-na-polonia-4719556.html",
+source: {
+name: "ZH",
+icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
+url: "http://zh.clicrbs.com.br"
+},
+id: "4719556"
+}
+]
+}
